// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsentToDataSharing shows the correct content for non-employers 1`] = `
<div>
  <form
    class="usa-form"
    method="post"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
      tabindex="-1"
    >
      How this website uses your information
    </h1>
    <p
      class="margin-bottom-2"
    >
      The information you provide on this website will be used to administer the Paid Family and Medical Leave program. To continue using this website, you must agree to the terms of the user agreements updated as of June 25, 2021.
    </p>
    <div
      aria-multiselectable="true"
      class="usa-accordion usa-accordion--bordered"
    >
      <h2
        class="usa-accordion__heading"
      >
        <button
          aria-controls="accordion1"
          aria-expanded="false"
          class="usa-accordion__button"
          type="button"
        >
          Applying for benefits
        </button>
      </h2>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordion1"
        hidden=""
        id="accordion1"
      >
        <p>
          We need this information to:
        </p>
        <ul
          class="usa-list"
        >
          <li>
            Check your eligibility for coverage
          </li>
          <li>
            Determine your benefit amount
          </li>
          <li>
            Give you the best service possible
          </li>
        </ul>
      </div>
      <h2
        class="usa-accordion__heading"
      >
        <button
          aria-controls="accordion2"
          aria-expanded="false"
          class="usa-accordion__button"
          type="button"
        >
          How we use your data
        </button>
      </h2>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordion2"
        hidden=""
        id="accordion2"
      >
        <p>
          We’ll keep your information private as required by law. As a part of the application process, we may check the information you give with other state agencies. We may share information related to your application with your employer, employer’s affiliates, health care provider(s), and contracted private partners.
        </p>
      </div>
      <h2
        class="usa-accordion__heading"
      >
        <button
          aria-controls="accordion3"
          aria-expanded="false"
          class="usa-accordion__button"
          type="button"
        >
          Read the full user agreements
        </button>
      </h2>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordion3"
        hidden=""
        id="accordion3"
      >
        <p>
          To find out more about how the Commonwealth might use the information you share with the Department of Family and Medical Leave, please read the 
          <a
            href="https://www.mass.gov/paidleave-informedconsent"
            rel="noopener noreferrer"
            target="_blank"
          >
            DFML Informed Consent Agreement
          </a>
           and the 
          <a
            href="https://www.mass.gov/privacypolicy"
            rel="noopener noreferrer"
            target="_blank"
          >
            Privacy Policy for Mass.gov
          </a>
          .
        </p>
      </div>
    </div>
    <div
      class="usa-alert usa-alert--info usa-alert--no-icon"
      role="region"
      tabindex="-1"
    >
      <div
        class="usa-alert__body"
      >
        <div
          class="usa-alert__text"
        >
          <p>
            By continuing, I am indicating that I have read and understood the above user agreements. I give the Department of Family and Medical Leave permission to collect, share, and use my information consistent with the terms of the agreements linked above.
          </p>
          <button
            class="usa-button position-relative"
            type="submit"
          >
            Agree and continue
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`ConsentToDataSharing shows the correct contents for employers 1`] = `
<div>
  <form
    class="usa-form"
    method="post"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
      tabindex="-1"
    >
      How this website uses your information
    </h1>
    <p
      class="margin-bottom-2"
    >
      The information you provide on this website will be used to administer the Paid Family and Medical Leave program. To continue using this website, you must agree to the terms of the user agreements updated as of June 25, 2021.
    </p>
    <div
      aria-multiselectable="true"
      class="usa-accordion usa-accordion--bordered"
    >
      <h2
        class="usa-accordion__heading"
      >
        <button
          aria-controls="accordion4"
          aria-expanded="false"
          class="usa-accordion__button"
          type="button"
        >
          Reviewing paid leave applications
        </button>
      </h2>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordion4"
        hidden=""
        id="accordion4"
      >
        <p>
          We need this information to:
        </p>
        <ul
          class="usa-list"
        >
          <li>
            Check eligibility for coverage
          </li>
          <li>
            Determine your employee’s benefit amount
          </li>
          <li>
            Administer the program and meet reporting requirements
          </li>
          <li>
            Give you the best service possible
          </li>
        </ul>
      </div>
      <h2
        class="usa-accordion__heading"
      >
        <button
          aria-controls="accordion5"
          aria-expanded="false"
          class="usa-accordion__button"
          type="button"
        >
          How we use your data
        </button>
      </h2>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordion5"
        hidden=""
        id="accordion5"
      >
        <p>
          We’ll keep your information private as required by law. As a part of the application process, we may check the information you give with other state agencies. We may share information related to an application with health care providers and contracted private partners.
        </p>
      </div>
      <h2
        class="usa-accordion__heading"
      >
        <button
          aria-controls="accordion6"
          aria-expanded="false"
          class="usa-accordion__button"
          type="button"
        >
          Read the full user agreements
        </button>
      </h2>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordion6"
        hidden=""
        id="accordion6"
      >
        <p>
          To find out more about how the Commonwealth might use the information you share with the Department of Family and Medical Leave, please read the 
          <a
            href="https://www.mass.gov/paidleave-informedconsent"
            rel="noopener noreferrer"
            target="_blank"
          >
            DFML Informed Consent Agreement
          </a>
           and the 
          <a
            href="https://www.mass.gov/privacypolicy"
            rel="noopener noreferrer"
            target="_blank"
          >
            Privacy Policy for Mass.gov
          </a>
          .
        </p>
      </div>
    </div>
    <div
      class="usa-alert usa-alert--info usa-alert--no-icon"
      role="region"
      tabindex="-1"
    >
      <div
        class="usa-alert__body"
      >
        <div
          class="usa-alert__text"
        >
          <p>
            By continuing, I am indicating that I have read and understood the above user agreements. I give the Department of Family and Medical Leave permission to collect, share, and use my information consistent with the terms of the agreements linked above.
          </p>
          <button
            class="usa-button position-relative"
            type="submit"
          >
            Agree and continue
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;
